Club and Team detail pages with respective athlete lists paginated. Settings module name now retrieved from .env file using decouple.config. 1

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,21 @@ backcall==0.2.0
 bleach==3.2.0
 certifi==2020.6.20
 cffi==1.14.2
+chardet==4.0.0
 colorama==0.4.3
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 Django==2.2
+django-address==0.2.5
+django-address-app==0.1.7
 django-extensions==3.1.0
 django-filter==2.2.0
+django-phone-field==1.8.1
 django-widget-tweaks==1.4.8
 entrypoints==0.3
+environs==9.3.0
+idna==2.10
 ipykernel==5.3.4
 ipython==7.18.1
 ipython-genutils==0.2.0
@@ -28,6 +34,7 @@ jupyter-core==4.6.3
 jupyterlab-pygments==0.1.1
 kiwisolver==1.2.0
 MarkupSafe==1.1.1
+marshmallow==3.10.0
 matplotlib==3.3.2
 mistune==0.8.4
 mysqlclient==2.0.3
@@ -45,26 +52,33 @@ pickleshare==0.7.5
 Pillow==8.1.0
 prometheus-client==0.8.0
 prompt-toolkit==3.0.7
+psycopg2-binary==2.8.6
 pycparser==2.20
 Pygments==2.7.1
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
 python-decouple==3.4
+python-dotenv==0.15.0
 pytz==2019.3
 pywin32==228
 pywinpty==0.5.7
 pyzmq==19.0.2
 qtconsole==4.7.7
 QtPy==1.9.0
+requests==2.25.1
 scipy==1.5.2
 Send2Trash==1.5.0
 six==1.15.0
 sqlparse==0.3.0
+structlog==20.2.0
+swapper==1.1.2.post1
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
 traitlets==5.0.4
+typing-extensions==3.7.4.3
+urllib3==1.26.2
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
